--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,8 @@ import(nnTensor)
 import(BiocStyle)
 import(knitr)
 import(MeSH.Hsa.eg.db)
-import(MeSH.Mmu.eg.db)
-import(MeSH.Ath.eg.db)
-import(MeSH.Rno.eg.db)
-import(MeSH.Bta.eg.db)
-import(MeSH.Cel.eg.db)
-import(MeSH.Dme.eg.db)
-import(MeSH.Dre.eg.db)
-import(MeSH.Gga.eg.db)
-import(MeSH.Pab.eg.db)
-import(MeSH.Xtr.eg.db)
-import(MeSH.Ssc.eg.db)
+import(LRBase.Hsa.eg.db)
+import(GOstats)
 
 importFrom(reactome.db, reactomeEXTID2PATHID)
 importFrom(AnnotationDbi, toTable)
@@ -25,18 +16,23 @@ importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
 importFrom(plotly, plot_ly)
 importFrom(SummarizedExperiment, assay)
-importFrom(rTensor, as.tensor, modeSum)
+importFrom(rTensor, as.tensor, modeSum, rs_unfold)
 importFrom(abind, abind)
 importFrom(plotrix, gradient.rect)
 importFrom(heatmaply, heatmaply)
-importFrom(tagcloud, smoothPalette)
+importFrom(tagcloud, smoothPalette, tagcloud)
 importFrom(RColorBrewer, brewer.pal)
 importFrom(rmarkdown, render)
 
 importFrom(grDevices, colorRampPalette, dev.off, png, rgb)
-importFrom(graphics, par, plot, text)
-importFrom(stats, cor, dist, na.omit, quantile)
-importFrom(utils, browseURL)
+importFrom(graphics, par, plot, text, legend)
+importFrom(stats, cor, dist, na.omit, quantile, p.adjust, hclust, cutree)
+importFrom(utils, browseURL, txtProgressBar, setTxtProgressBar)
 importFrom(outliers, grubbs.test, chisq.out.test)
+importFrom(meshr, meshHyperGTest)
+importFrom(ReactomePA, enrichPathway)
+importFrom(snow, clusterExport, parSapply, clusterEvalQ)
+importFrom(Category, hyperGTest)
 
-exportMethods(cellCellSetting, cellCellDecomp, cellCellReport)
+
+exportMethods(cellCellSetting, cellCellRanks, cellCellDecomp, cellCellReport)
