--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,14 @@
 import(methods)
-import(igraph)
 import(SingleCellExperiment)
-import(nnTensor)
 import(BiocStyle)
 import(knitr)
 import(MeSH.Hsa.eg.db)
 import(LRBase.Hsa.eg.db)
 import(GOstats)
 
-importFrom(reactome.db, reactomeEXTID2PATHID)
 importFrom(AnnotationDbi, toTable)
+importFrom(igraph, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist)
+importFrom(reactome.db, reactomeEXTID2PATHID)
 importFrom(LRBaseDbi, select)
 importFrom(biomaRt, useMart, getBM)
 importFrom(MeSHDbi, select)
@@ -21,7 +20,6 @@ importFrom(abind, abind)
 importFrom(plotrix, gradient.rect)
 importFrom(heatmaply, heatmaply)
 importFrom(tagcloud, smoothPalette, tagcloud)
-importFrom(RColorBrewer, brewer.pal)
 importFrom(rmarkdown, render)
 
 importFrom(grDevices, colorRampPalette, dev.off, png, rgb)
@@ -29,10 +27,9 @@ importFrom(graphics, par, plot, text, legend)
 importFrom(stats, cor, dist, na.omit, quantile, p.adjust, hclust, cutree)
 importFrom(utils, browseURL, txtProgressBar, setTxtProgressBar)
 importFrom(outliers, grubbs.test, chisq.out.test)
-importFrom(meshr, meshHyperGTest)
+importFrom(nnTensor, NMF, NTD, recTensor)
 importFrom(ReactomePA, enrichPathway)
 importFrom(snow, clusterExport, parSapply, clusterEvalQ)
 importFrom(Category, hyperGTest)
-
 
 exportMethods(cellCellSetting, cellCellRanks, cellCellDecomp, cellCellReport)
