--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: scTensor
 Type: Package
-Title: Detection and visualization of cell-cell interaction within single-cell RNA-Seq data
-Version: 0.99.5
+Title: Detection of cell-cell interaction within single-cell RNA-Seq data
+Version: 0.99.6
 Date: 2018-09-25
-Author: Koki Tsuyuzaki
-Maintainer: Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>
+Authors@R: person("Koki", "Tsuyuzaki", role = c("aut", "cre"), email = "k.t.the-answer@hotmail.co.jp")
 Depends: R (>= 3.5.0)
-Imports: methods, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, LRBaseDbi, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, biomaRt, LRBase.Hsa.eg.db, MeSH.Hsa.eg.db, MeSHDbi, grDevices, graphics, stats, utils, outliers, snow, Category
-Suggests: testthat, RSQLite, LRBase.Mmu.eg.db, MeSH.Mmu.eg.db
+Imports: methods, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, LRBaseDbi, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, biomaRt, MeSHDbi, grDevices, graphics, stats, utils, outliers, snow, Category
+Suggests: testthat, RSQLite, LRBase.Hsa.eg.db, MeSH.Hsa.eg.db, LRBase.Mmu.eg.db, MeSH.Mmu.eg.db
 Description: The algorithm is based on the non-negative tucker decomposition (NTD) of nnTensor.
 License: Artistic-2.0
 biocViews: DimensionReduction, SingleCell
