--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction within single-cell RNA-Seq data
-Version: 0.99.10
+Version: 0.99.11
 Date: 2018-09-25
 Authors@R: person("Koki", "Tsuyuzaki", role = c("aut", "cre"), email = "k.t.the-answer@hotmail.co.jp")
 Depends: R (>= 3.5.0)
-Imports: methods, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, LRBaseDbi, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, biomaRt, MeSHDbi, grDevices, graphics, stats, utils, outliers, snow, Category
+Imports: methods, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, LRBaseDbi, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, biomaRt, MeSHDbi, grDevices, graphics, stats, utils, outliers, Category
 Suggests: testthat, RSQLite, LRBase.Hsa.eg.db, MeSH.Hsa.eg.db, LRBase.Mmu.eg.db, MeSH.Mmu.eg.db
 Description: The algorithm is based on the non-negative tucker decomposition (NTD) of nnTensor.
 License: Artistic-2.0
