--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,11 @@ import(methods)
 import(SingleCellExperiment)
 import(BiocStyle)
 import(knitr)
+import(RSQLite)
 
 importFrom(AnnotationDbi, toTable)
 importFrom(igraph, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist)
 importFrom(reactome.db, reactomeEXTID2PATHID)
-importFrom(LRBaseDbi, select)
 importFrom(biomaRt, useMart, getBM)
 importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
@@ -26,5 +26,10 @@ importFrom(utils, browseURL, txtProgressBar, setTxtProgressBar)
 importFrom(outliers, grubbs.test, chisq.out.test)
 importFrom(nnTensor, NMF, NTD, recTensor)
 importFrom(Category, hyperGTest)
+
+importFrom(meshr, meshHyperGTest)
+import(GOstats)
+importFrom(ReactomePA, enrichPathway)
+importFrom(DOSE, enrichDGN, enrichDO, enrichNCG)
 
 exportMethods(cellCellSetting, cellCellRanks, cellCellDecomp, cellCellReport)
