--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@ import(SingleCellExperiment)
 import(BiocStyle)
 import(knitr)
 import(RSQLite)
+import(AnnotationHub)
 
 importFrom(AnnotationDbi, toTable)
-importFrom(igraph, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist)
+importFrom(igraph, graph.data.frame, bipartite_mapping, max_bipartite_match, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist)
 importFrom(reactome.db, reactomeEXTID2PATHID)
-importFrom(biomaRt, useMart, getBM)
 importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
 importFrom(plotly, plot_ly)
