--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction from single-cell RNA-seq dataset by tensor decomposition
-Version: 1.0.8
-Date: 2019-07-23
+Version: 1.0.9
+Date: 2019-07-27
 Authors@R: person("Koki", "Tsuyuzaki", role = c("aut", "cre"), email = "k.t.the-answer@hotmail.co.jp")
 Depends: R (>= 3.5.0)
-Imports: methods, RSQLite, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, AnnotationHub, MeSHDbi, grDevices, graphics, stats, utils, outliers, Category, meshr, GOstats, ReactomePA, DOSE, crayon, checkmate
+Imports: methods, RSQLite, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, AnnotationHub, MeSHDbi, grDevices, graphics, stats, utils, outliers, Category, meshr, GOstats, ReactomePA, DOSE, crayon, checkmate, BiocManager
 Suggests: testthat, LRBase.Hsa.eg.db, MeSH.Hsa.eg.db, LRBase.Mmu.eg.db, MeSH.Mmu.eg.db, LRBaseDbi, Seurat, Homo.sapiens
 Description: The algorithm is based on the non-negative tucker decomposition (NTD) of nnTensor.
 License: Artistic-2.0
