--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ importFrom(reactome.db, reactomeEXTID2PATHID)
 importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
 importFrom(plotly, plot_ly)
-importFrom(SummarizedExperiment, assay)
+importFrom(SummarizedExperiment, assay, assays, "assay<-", "assays<-")
 importFrom(rTensor, as.tensor, modeSum, rs_unfold)
 importFrom(abind, abind)
 importFrom(plotrix, gradient.rect)
