--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,58 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction from single-cell RNA-seq dataset by tensor decomposition
-Version: 1.0.13
-Date: 2019-09-20
+Version: 1.2.0
 Authors@R: c(person("Koki", "Tsuyuzaki", role = c("aut", "cre"),
                 email = "k.t.the-answer@hotmail.co.jp"),
             person("Kozo", "Nishida", role = "aut",
                 email = "kozo.nishida@gmail.com"))
 Depends: R (>= 3.5.0)
-Imports: methods, RSQLite, igraph, S4Vectors, plotly, reactome.db, AnnotationDbi, SummarizedExperiment, SingleCellExperiment, nnTensor, rTensor, abind, plotrix, heatmaply, tagcloud, rmarkdown, BiocStyle, knitr, AnnotationHub, MeSHDbi, grDevices, graphics, stats, utils, outliers, Category, meshr, GOstats, ReactomePA, DOSE, crayon, checkmate, BiocManager, visNetwork
-Suggests: testthat, LRBase.Hsa.eg.db, MeSH.Hsa.eg.db, LRBase.Mmu.eg.db, MeSH.Mmu.eg.db, LRBaseDbi, Seurat, Homo.sapiens
+Imports: methods,
+    RSQLite,
+    igraph,
+    S4Vectors,
+    plotly,
+    reactome.db,
+    AnnotationDbi,
+    SummarizedExperiment,
+    SingleCellExperiment,
+    nnTensor,
+    rTensor,
+    abind,
+    plotrix,
+    heatmaply,
+    tagcloud,
+    rmarkdown,
+    BiocStyle,
+    knitr,
+    AnnotationHub,
+    MeSHDbi,
+    grDevices,
+    graphics,
+    stats,
+    utils,
+    outliers,
+    Category,
+    meshr,
+    GOstats,
+    ReactomePA,
+    DOSE,
+    crayon,
+    checkmate,
+    BiocManager,
+    visNetwork
+Suggests: testthat,
+    LRBase.Hsa.eg.db,
+    MeSH.Hsa.eg.db,
+    LRBase.Mmu.eg.db,
+    MeSH.Mmu.eg.db,
+    LRBaseDbi,
+    Seurat,
+    Homo.sapiens
 Description: The algorithm is based on the non-negative tucker decomposition (NTD2) of nnTensor.
 License: Artistic-2.0
-biocViews: DimensionReduction, SingleCell
+biocViews: DimensionReduction,
+    SingleCell,
+    Software,
+    GeneExpression
 VignetteBuilder: knitr
