--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ import(AnnotationHub)
 importFrom(stats, median)
 importFrom(BiocManager, install)
 importFrom(AnnotationDbi, toTable)
-importFrom(igraph, graph.data.frame, bipartite_mapping, max_bipartite_match, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist)
+importFrom(igraph, graph.data.frame, bipartite_mapping, max_bipartite_match, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist, get.vertex.attribute, edge.attributes)
 importFrom(reactome.db, reactomeEXTID2PATHID)
 importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
@@ -39,7 +39,7 @@ importFrom(checkmate, assertClass, assertList)
 importFrom("stats", "rbinom", "rnbinom", "var")
 importFrom("utils", "data")
 
-importFrom(visNetwork, visNetwork, toVisNetworkData)
+importFrom(visNetwork, visNetwork)
 
 exportMethods(cellCellSetting, cellCellRanks, cellCellDecomp, cellCellReport, getParam, "setParam<-")
 export(cellCellSimulate, newCCSParams, convertToNCBIGeneID)
