--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ import(knitr)
 import(RSQLite)
 import(AnnotationHub)
 
-importFrom(stats, median)
 importFrom(BiocManager, install)
 importFrom(AnnotationDbi, toTable)
 importFrom(igraph, graph.data.frame, bipartite_mapping, max_bipartite_match, graph.empty, add.vertices, add.edges, "E<-", "V<-", V, E, layout_with_dh, plot.igraph, get.edgelist, get.vertex.attribute, edge.attributes)
@@ -14,7 +13,7 @@ importFrom(MeSHDbi, select)
 importFrom(S4Vectors, metadata, "metadata<-")
 importFrom(plotly, plot_ly)
 importFrom(SummarizedExperiment, assay, assays, "assay<-", "assays<-")
-importFrom(rTensor, as.tensor, modeSum, rs_unfold)
+importFrom(rTensor, as.tensor, modeSum, rs_unfold, cs_unfold)
 importFrom(abind, abind)
 importFrom(plotrix, gradient.rect)
 importFrom(heatmaply, heatmaply)
@@ -23,7 +22,6 @@ importFrom(rmarkdown, render)
 
 importFrom(grDevices, colorRampPalette, dev.off, png, rgb)
 importFrom(graphics, par, plot, text, legend)
-importFrom(stats, cor, dist, na.omit, quantile, p.adjust, hclust, cutree)
 importFrom(utils, browseURL, txtProgressBar, setTxtProgressBar)
 importFrom(outliers, grubbs.test, chisq.out.test)
 importFrom(nnTensor, NMF, NTD, recTensor)
@@ -36,10 +34,12 @@ importFrom(DOSE, enrichDGN, enrichDO, enrichNCG)
 
 importFrom(crayon, bold, blue, green)
 importFrom(checkmate, assertClass, assertList)
-importFrom("stats", "rbinom", "rnbinom", "var")
+importFrom(stats, median, cor, dist, na.omit, quantile, p.adjust, hclust, cutree, rbinom, rnbinom, var, sd)
 importFrom("utils", "data")
 
 importFrom(visNetwork, visNetwork)
+importFrom(schex, make_hexbin, plot_hexbin_gene)
+importFrom(ggplot2, scale_fill_gradient, ggsave)
 
 exportMethods(cellCellSetting, cellCellRanks, cellCellDecomp, cellCellReport, getParam, "setParam<-")
 export(cellCellSimulate, newCCSParams, convertToNCBIGeneID)
