--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction from single-cell RNA-seq dataset by tensor decomposition
-Version: 1.2.1
+Version: 1.4.0
 Authors@R: c(person("Koki", "Tsuyuzaki", role = c("aut", "cre"),
                 email = "k.t.the-answer@hotmail.co.jp"),
             person("Kozo", "Nishida", role = "aut",
@@ -40,7 +40,9 @@ Imports: methods,
     crayon,
     checkmate,
     BiocManager,
-    visNetwork
+    visNetwork,
+    schex,
+    ggplot2
 Suggests: testthat,
     LRBase.Hsa.eg.db,
     MeSH.Hsa.eg.db,
