--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction from single-cell RNA-seq dataset by tensor decomposition
-Version: 2.0.1
+Version: 2.4.0
 Authors@R: c(person("Koki", "Tsuyuzaki", role = c("aut", "cre"),
                 email = "k.t.the-answer@hotmail.co.jp"),
             person("Kozo", "Nishida", role = "aut",
@@ -17,6 +17,7 @@ Imports: methods,
     SummarizedExperiment,
     SingleCellExperiment,
     nnTensor,
+    ccTensor,
     rTensor,
     abind,
     plotrix,
