--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: scTensor
 Type: Package
 Title: Detection of cell-cell interaction from single-cell RNA-seq dataset by tensor decomposition
-Version: 2.3.3
+Version: 2.4.1
 Authors@R: c(person("Koki", "Tsuyuzaki", role = c("aut", "cre"),
                 email = "k.t.the-answer@hotmail.co.jp"),
             person("Kozo", "Nishida", role = "aut",
@@ -16,9 +16,9 @@ Imports: methods,
     AnnotationDbi,
     SummarizedExperiment,
     SingleCellExperiment,
-    nnTensor,
-    ccTensor,
-    rTensor,
+    nnTensor (>= 1.1.5),
+    ccTensor (>= 1.0.2),
+    rTensor (>= 1.4.8),
     abind,
     plotrix,
     heatmaply,
@@ -27,14 +27,14 @@ Imports: methods,
     BiocStyle,
     knitr,
     AnnotationHub,
-    MeSHDbi,
+    MeSHDbi (>= 1.29.2),
     grDevices,
     graphics,
     stats,
     utils,
     outliers,
     Category,
-    meshr,
+    meshr (>= 1.99.1),
     GOstats,
     ReactomePA,
     DOSE,
